Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,12 +24,11 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
+    - task: DockerCompose@0
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+        containerregistrytype: 'Azure Container Registry'
+        azureSubscription: 'tinfoilcipher(5a276f10-4ae1-4943-8c23-463409a3374c)'
+        azureContainerRegistry: '{"loginServer":"tinfoilregistry.azurecr.io", "id" : "/subscriptions/5a276f10-4ae1-4943-8c23-463409a3374c/resourceGroups/tinfoil_logic_rg/providers/Microsoft.ContainerRegistry/registries/tinfoilregistry"}'
+        dockerComposeFile: '**/docker-compose.yml'
+        action: 'Run a Docker Compose command'
+        dockerComposeCommand: 'pull'
